EB-2004-01-21-0: Bugfix:   Queue selection did not work in combination
                           with cluster queue printing (qstat -g c -q <QI>)
                 Changed:  qstat

RC-2004-01-20-0: Enhancem.: use sysconf(_SC_NPROCESSORS_ONLN) to get nprocs on 
                            Linux.
                 Changed:   libs/uti/sge_nprocs.c

CR-2004-01-20-1: Enhancem.: communication lib: status information response
                            message reports application status. 
                 Changed:   ngc lib

JM-2004-01-20-3: Bugfix:    The aimk configurations for AIX4[123] and AIX51
                            are changed to use CC=xlc_r and CXX=xlC_r.
                            SHAREDLD (for AIX51) is also set to 'xlc_r'.
                 Changed:   aimk
                 Reviewed:  RH, AS

JM-2004-01-20-2: Bugfix:    The setrlimitj() call under SUPER-UX must be 
                            surrounded by sge_switch2start_user() and 
                            sge_switch2admin_user() to be effective.
                 Changed:   daemons/shepherd/setrlimits.c
                 Reviewed:  SD

CR-2004-01-20-0: Cleanup:   - enabled threads for communication in qmaster
                            - hostname resolving (still no alias file support)
                            - communication log can now be switched on/off
                              with environment variable "SGE_NGC_DEBUG"
                            - sge_gethostbyname() and sge_gethostbyaddr() now
                              always return a copy of the hostent struct

JM-2004-01-20-1: Enhancem:  Revise japi.c to use rand_r() instead of
                            (s)random() which are not reentrant. 'id'
                            is changed from long to int to suit
                            rand_r().
                 Changed:   libs/japi/japi.c
                 Reviewed:  AH

EB-2004-01-20-1: Enhancem.: new switch "qconf -sick"
                 Changed:   qconf
