@@ -652,7 +652,7 @@ static char* qevent_get_event_name(int event) {
 
 void qevent_testsuite_mode(void) 
 {
-#if 0 /* EB: debug */
+#if 0 /* EB: DEBUG */
 #define QEVENT_SHOW_ALL
 #endif
    u_long32 timestamp;
