@@ -716,6 +716,7 @@
 #define MSG_QINSTANCE_QIALREADYHERE_S   _MESSAGE(33725, _("Should create queue instance "SFQ" which is already here\n"))
 #define MSG_QINSTANCE_NQIFOUND_SS      _MESSAGE(33726, _("queue instance "SFQ" not found in "SFQ"\n"))
 #define MSG_JOB_WILD_RANGE_AMBIGUOUS   _MESSAGE(33727, _("job rejected: PEs matching wildcard and jobs slot range would cause ambiguous urgency slot amount\n"))
+#define MSG_ATTR_HASAMBVAL_SSS         _MESSAGE(33728, _("waning: "SFQ" has ambiguous value ("SFQ", "SFQ")\n"))
 
 /*
  * job logging
@@ -728,5 +729,6 @@
 #define MSG_LOG_DELSGE                _MESSAGE(33805, _("job deleted by schedd"))
 #define MSG_LOG_DELIMMEDIATE          _MESSAGE(33806, _("immediate job deleted by schedd"))
 #define MSG_LOG_JATASKEXIT            _MESSAGE(33807, _("ja task exited") )  
+
 #endif
 
