@@ -64,7 +64,6 @@ cqueue_update_master_list(sge_object_type type, sge_event_action action,
    if ((action == SGE_EMA_MOD || action == SGE_EMA_ADD) 
        && cqueue != NULL) {
       /*
-       * EB:   
        * modify events for CQ_Type objects; we may not update
        * - CQ_qinstances - it is maintained by QINSTANCE events
        */         
